--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
     <!-- ΚΑΡΤΑ 1 – Στοιχεία Εταιρείας -->
     <div class="gemi-card">
       <h3>Στοιχεία Εταιρείας</h3>
+      <div class="table-responsive">
       <table class="gemi-table">
         <tbody>
           <tr>
@@ -282,11 +283,13 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
 
     <!-- ΚΑΡΤΑ 2 – ΓΕΜΗ – Στοιχεία Δημοσιότητας -->
     <div class="gemi-card">
       <h3>ΓΕΜΗ – Στοιχεία Δημοσιότητας</h3>
+      <div class="table-responsive">
       <table class="gemi-table">
         <tbody>
           <tr>
@@ -331,11 +334,13 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
 
     <!-- ΚΑΡΤΑ 3 – Στοιχεία Εταίρων -->
     <div class="gemi-card">
       <h3>Στοιχεία Εταίρων</h3>
+      <div class="table-responsive">
       <table class="gemi-table gemi-table-partners">
         <thead>
           <tr>
@@ -363,12 +368,13 @@
           </tr>
         </tbody>
       </table>
+      </div>
     </div>
 
     <!-- ΚΑΡΤΑ 4 – Δραστηριότητες (ΚΑΔ) -->
 <div class="gemi-card">
   <h3>Δραστηριότητες (ΚΑΔ)</h3>
-
+  <div class="table-responsive">
   <table class="gemi-table gemi-table-activities">
     <thead>
       <tr>
@@ -473,6 +479,7 @@
       </tr>
 
     </tbody>
+  </div>
   </table>
 
   <p class="gemi-note">
