--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <nav class="navbar">
 
     <!-- LOGO -->
-    <div class="logo">MAGFRIGO</div>
+    <div class="logo">MAGFRIGOO</div>
 
     <!-- DESKTOP LINKS -->
     <ul class="nav-links">
